--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "immer": "^9.0.15",
     "quill": "^1.3.7",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
